# gym-genesis

./: .gitignore  .gitmodules  README.md  demo.py  pyproject.toml  setup.py  test.py
assets/250505_kitchen/: 3e0d81cf-10c2-4b53-9a36-55d871acdfa4_1.glb  45a68868-0c41-45d4-98c5-7721fc6c1445.glb  56dd3ebb-5be3-4ad9-90df-58de2478a15b.glb  72404881-fbfd-4f8a-9382-bbf5ba77f16d.glb  9286496a-b761-4bdf-9f08-7966281b9c69.hdr  place_house.py  test.py
assets/SO-ARM100/Simulation/SO101/: so101.xml  so101_old_calib.xml
examples/: pick-cube-batch.py  stack-cube-batch.py  stack-cube.py
examples/franka/: collect.py  pick_cube_image.py  pick_cube_state.py  stack_cube_one_image.py  stack_cube_state.py
examples/pick_cube/: pick_cube_image.py  pick_cube_images.py  pick_cube_state.py
examples/so_101/: collect.py  collect_task2.py  collect_task2_batch.py  collect_task_stack_cube.py  collect_task_stack_cube_batch.py
examples/stack_cube/: collect.py  stack_cube_image.py  stack_cube_one_image.py  stack_cube_state.py
gym_genesis/: __init__.py  env.py  utils.py
gym_genesis/tasks/: cube.py  cube_pick.py  cube_stack.py  cube_stack_kitchen.py  cube_stack_one.py  utils.py
gym_genesis/tasks/franka/: cube_pick.py  cube_stack.py  cube_stack_kitchen.py  cube_stack_kitchen_batch.py  cube_stack_one.py
gym_genesis/tasks/so101/: cam.py  cube_pick.py  cube_stack.py  cube_stack_batch.py
