[project]
name = "gym_genesis"
version = "0.1.0"
description = "A gym environment for GENESIS"
authors = [
  { name = "Jade Choghari", email = "jchoghar@uwaterloo.ca" },
  { name = "Rémi Cadène", email = "re.cadene@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
  "gymnasium",
  "torch",
  "genesis-world==0.2.1",
]

[project.optional-dependencies]
examples = [
  "lerobot @ git+https://github.com/huggingface/lerobot.git@main",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
